--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -36,15 +36,15 @@
 
             <android.support.design.widget.AppBarLayout
                 android:id="@+id/id_appbar"
+                style="@style/Theme.AppCompat.DayNight.DarkActionBar"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                style="@style/Theme.AppCompat.DayNight.DarkActionBar">
+                android:layout_height="wrap_content">
 
                 <android.support.design.widget.CollapsingToolbarLayout
                     android:id="@+id/collapsing_toolbar"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    app:layout_scrollFlags="scroll|enterAlways">
+                    app:layout_scrollFlags="enterAlways">
 
 
                     <android.support.design.widget.TabLayout
@@ -61,14 +61,14 @@
                 </android.support.design.widget.CollapsingToolbarLayout>
             </android.support.design.widget.AppBarLayout>
 
-                <android.support.v4.view.ViewPager
-                    android:id="@+id/viewpager"
-                    android:layout_width="fill_parent"
-                    android:layout_height="fill_parent"
-                    app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
+            <android.support.v4.view.ViewPager
+                android:id="@+id/viewpager"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
         </android.support.design.widget.CoordinatorLayout>
 
     </RelativeLayout>
 
-   </android.support.design.widget.CoordinatorLayout>
+</android.support.design.widget.CoordinatorLayout>
